--- a/answers.tex
+++ b/answers.tex
@@ -167,7 +167,7 @@ Due to the space constraint we are not able to provide an experiment where we va
 The paper is written in easy to understand practical terms, except Section 2 which contrasts with the rest of the paper through its rather theoretical nature. The connection between Section 2 and the rest of the paper is not really obvious and it took me several iterations of the paper to understand it. I suggest that the authors increase the cross references to better highlight it. 
 \end{review}
 
-\answer{In section 4, we increased the cross references to highlight the use of the conclusions of Section 2.}
+\answer{We revised and extended definitions and equations to improve the readability of Section 2. In section 4, we increased the cross references to highlight the use of the conclusions of Section 2.}
 
 
 
