--- a/biblio.bib
+++ b/biblio.bib
@@ -2,7 +2,6 @@
 	title = {Community Resources for Enabling and Evaluating Research on Scientific Workflows},
 	author = {Ferreira da Silva, Rafael and Chen, Weiwei and Juve, Gideon and Vahi, Karan and Deelman, Ewa},
 	booktitle = {10th IEEE International Conference on e-Science},
-	series = {eScience'14},
 	year = {2014},
 	pages = {177--184},
 	doi = {10.1109/eScience.2014.44}
@@ -1055,11 +1054,10 @@ pages={167-},
   year={2002},
 },
 @inproceedings{Kalayci2010,
-author={S. Kalayci and G. Dasgupta and L. Fong and O. Ezenwoye and and S. Sadjadi},
+author={S. Kalayci and others},
 title={Distributed and adaptive execution of condor dagman workflows},
 booktitle={22nd International Conference on Software Engineering and Knowledge Engineering},
 year={2010},
-month=jul,
 },
 
 
@@ -1418,9 +1416,7 @@ pages={389 -400},
     journal = {Software: Practice and Experience},
     volume = {41},
     number = {1},
-    month = jan,
     year = {2011},
-    pages = {23--50},
     author = {Calheiros, Rodrigo N. and others},
 },
 
@@ -2398,14 +2394,13 @@ ISSN={1045-9219},},
 },
 
 @article{Oinn2004,
-    author = {Oinn, Tom and Addis, Matthew and Ferris, Justin and Marvin, Darren and Senger, Martin and Greenwood, Mark and Carver, Tim and Glover, Kevin and Pocock, Matthew R. and Wipat, Anil and Li, Peter},
+    author = {Oinn, Tom and others},
     title = {Taverna: a tool for the composition and enactment of bioinformatics workflows},
     journal = {Bioinformatics},
     volume = {20},
     number = {17},
-    month = nov,
     year = {2004},
-    pages = {3045--3054}
+    pages = {3045-3054}
 },
 
 @misc{OpenNebula,
