--- a/ftc.tex
+++ b/ftc.tex
@@ -32,7 +32,7 @@
         and~Thomas~Fahringer,~\IEEEmembership{Member,~IEEE}% <-this % stops a space
 
 	\IEEEcompsocitemizethanks{\IEEEcompsocthanksitem W. Chen, R. Ferreira da Silva and E. Deelman are with the Information Sciences Institute, University of Southern California, Marina del Rey, CA, USA. T. Fahringer is with the Institute for Computer Science, University of Innsbruck, Innsbruck, Austria.\protect
-	\IEEEcompsocthanksitem Corresponding author: Weiwei Chen wchenpublic@gmail.com
+	\IEEEcompsocthanksitem Corresponding author: Weiwei Chen weiweich@google.com
 }% <-this % stops a space
 \thanks{}}
 
@@ -1407,7 +1407,7 @@ experiments conducted on FutureGrid, which is supported by NSF under grant Futur
 \bibliographystyle{elsarticle-num}
 \bibliography{biblio}
 
-\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{weiwei.eps}}]{Weiwei Chen} is a Ph.D. candidate in the Dept. of Computer Science, University of Southern California, USA. In 2009, he completed his bachelor in the Dept. of Automation, Tsinghua University, China. He is currently working on task clustering in scientific workflows. His research interests include distributed computing, services computing and data analysis. 
+\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{weiwei.eps}}]{Weiwei Chen} received his PhD in Computer Science from University of Southern California, USA in 2014. In 2009, he completed his bachelor in the Dept. of Automation, Tsinghua University, China. His research interests include distributed computing, service computing and data analysis. He currently works at Google's infrastructure team.
 \end{IEEEbiography}
 % insert where needed to balance the two columns on the last page with
 % biographies
